Only use Java 9 options with Java 9+